feat: Add all the reducers and context for the trello app
Add all the contexts and reducers for the project management app and connect these with our Boards page.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
 	"reactSnippets.settings.prettierEnabled": true,
 	"[javascriptreact]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	}
 }
