--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@redux-devtools/core": "^3.13.3",
+		"@redux-devtools/extension": "^3.2.6",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.2.0",
 		"react-beautiful-dnd": "^13.1.1",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.17.0",
 		"react-scripts": "5.0.1",
+		"redux": "^4.2.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
