--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 		"@redux-devtools/core": "^3.13.3",
 		"@redux-devtools/extension": "^3.2.6",
 		"@reduxjs/toolkit": "^1.9.7",
+		"@tanstack/react-query": "^5.8.7",
+		"@tanstack/react-query-devtools": "^5.8.7",
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
@@ -46,6 +48,7 @@
 		]
 	},
 	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.8.4",
 		"eslint-config-prettier": "^9.0.0"
 	}
 }
