--- a/package.json
+++ b/package.json
@@ -2,53 +2,20 @@
 	"name": "ic-batch-8-react",
 	"version": "0.1.0",
 	"private": true,
-	"dependencies": {
-		"@redux-devtools/core": "^3.13.3",
-		"@redux-devtools/extension": "^3.2.6",
-		"@reduxjs/toolkit": "^1.9.7",
-		"@tanstack/react-query": "^5.8.7",
-		"@tanstack/react-query-devtools": "^5.8.7",
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"react": "^18.2.0",
-		"react-beautiful-dnd": "^13.1.1",
-		"react-dom": "^18.2.0",
-		"react-redux": "^8.1.3",
-		"react-router-dom": "^6.17.0",
-		"react-scripts": "5.0.1",
-		"redux": "^4.2.1",
-		"redux-logger": "^3.0.6",
-		"redux-thunk": "^2.4.2",
-		"web-vitals": "^2.1.4"
-	},
 	"scripts": {
-		"start": "react-scripts start",
-		"start-fake-server": "json-server --watch -p 4000 db.json",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"dev": "next dev",
+		"start-fake-server": "json-server --watch -p 5000 db.json",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
 	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+	"dependencies": {
+		"react": "^18",
+		"react-dom": "^18",
+		"next": "14.0.3"
 	},
 	"devDependencies": {
-		"@tanstack/eslint-plugin-query": "^5.8.4",
-		"eslint-config-prettier": "^9.0.0"
+		"eslint": "^8",
+		"eslint-config-next": "14.0.3"
 	}
 }
