--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.7",
+		"next": "14.0.3",
 		"react": "^18",
 		"react-dom": "^18",
-		"next": "14.0.3"
+		"react-redux": "^8.1.3"
 	},
 	"devDependencies": {
 		"eslint": "^8",
