--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"start-fake-server": "json-server --watch -p 5000 db.json",
+		"start-fake-server": "json-server -p 8080 --watch db.json",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@reduxjs/toolkit": "^1.9.7",
-		"next": "14.0.3",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-redux": "^8.1.3"
+		"next": "14.0.3"
 	},
 	"devDependencies": {
 		"eslint": "^8",
