feat: Build Proper Authentication & Authorization using Next Auth
Create proper Authentication & Authorization using Next-Auth package. Create the auth options. Protecting the login routes and admin routes. Creating the Product Adding Feature and revalidating the home page using server actions.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"mongoose": "^7.6.7",
+		"mongoose-unique-validator": "^4.0.0",
+		"next": "14.0.3",
+		"next-auth": "^4.24.5",
 		"react": "^18",
-		"react-dom": "^18",
-		"next": "14.0.3"
+		"react-dom": "^18"
 	},
 	"devDependencies": {
 		"eslint": "^8",
