--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"mongoose-unique-validator": "^4.0.0",
 		"next": "14.0.3",
 		"next-auth": "^4.24.5",
+		"query-string": "^8.1.0",
 		"react": "^18",
 		"react-dom": "^18"
 	},
