--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"bootstrap-material-design": "^4.1.3",
+		"cloudinary": "^1.41.1",
 		"mongoose": "^7.6.7",
 		"mongoose-unique-validator": "^4.0.0",
 		"next": "14.0.3",
 		"next-auth": "^4.24.5",
 		"query-string": "^8.1.0",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-image-file-resizer": "^0.4.8"
 	},
 	"devDependencies": {
 		"eslint": "^8",
