feat: Add payment with stripe and order management

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 		"query-string": "^8.1.0",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-image-file-resizer": "^0.4.8"
+		"react-hot-toast": "^2.4.1",
+		"react-image-file-resizer": "^0.4.8",
+		"stripe": "^14.10.0"
 	},
 	"devDependencies": {
 		"eslint": "^8",
