chore: changing the api for production

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URI="mongodb+srv://asiefmahir:MahirAsief1997@mahir.bu468.mongodb.net/"
-API="http://localhost:3000/api"
-DOMAIN="http://localhost:3000/"
+API="https://ic-batch-8-react-mwibk8id9-asiefmahir.vercel.app/api"
+DOMAIN="https://ic-batch-8-react-mwibk8id9-asiefmahir.vercel.app"
 NEXTAUTH_SECRET="supersupersecrectasief"
 CLOUDINARY_CLOUD_NAME="dcdga3gke"
 CLOUDINARY_API_KEY="773518745252291"
