--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URI="mongodb+srv://asiefmahir:MahirAsief1997@mahir.bu468.mongodb.net/"
-API="https://ic-batch-8-react-mwibk8id9-asiefmahir.vercel.app/api"
-DOMAIN="https://ic-batch-8-react-mwibk8id9-asiefmahir.vercel.app"
+API="https://ic-batch-8-react.vercel.app/api"
+DOMAIN="https://ic-batch-8-react.vercel.app"
 NEXTAUTH_SECRET="supersupersecrectasief"
 CLOUDINARY_CLOUD_NAME="dcdga3gke"
 CLOUDINARY_API_KEY="773518745252291"
